wacc_examples/invalid_TEST/semanticErr/arrays/arrayElemAssignMissing_US.wacc
# array lhs assign identifier missing

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  a[1] = 2
end
